...
              onTap: () =>
                  Navigator.of(context).pushReplacement(MaterialPageRoute(
                builder: (context) => const VisualTimetableInterface(),
              )),
            ),
            ListTile(
              key: const Key("childMode"),
              leading: const Icon(Icons.child_care),
              title: const Text('Activate Child Mode'),
              onTap: () => Navigator.of(context).pushReplacement(
                  MaterialPageRoute(
                      builder: (context) => const ChildInterface())),
            ),
...
              key: const Key("accountDetails"),
              leading: const Icon(Icons.account_box_outlined),
              title: const Text('Edit Account Details'),
              onTap: () {},
            ),
            ListTile(
              key: const Key("logout"),
              leading: const Icon(Icons.logout_outlined),
              title: const Text('Log out'),
              onTap: () {},
            ),
          ],
        ),
...
